--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
     "@types/react-router-dom": "^5.3.3",
+    "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
     "framer-motion": "^6.2.8",
     "jquery": "^3.6.0",
