--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "@types/react-router-dom": "^5.3.3",
     "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
+    "cloudinary-react": "^1.7.2",
     "framer-motion": "^6.2.8",
     "jquery": "^3.6.0",
     "popper.js": "^1.16.1",
