--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,14 +12,18 @@
     "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
     "cloudinary-react": "^1.7.2",
+    "date-fns": "^2.28.0",
     "framer-motion": "^6.2.8",
     "jquery": "^3.6.0",
     "popper.js": "^1.16.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.2.1",
     "react-components": "^0.5.1",
+    "react-date-range": "^1.4.0",
+    "react-datepicker": "^4.7.0",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
+    "react-hook-form": "^7.30.0",
     "react-modal": "^3.14.4",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.2.1",
